updated getMonitor function

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 API_SECRET = This_is_very_secret_string
-MONGODB_URI = mongodb+srv://osomfonashticah:YxcFqwxtsne5IZUd@cluster0.227mvms.mongodb.net/status-check?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://contactsenyo:WaNc397ekUyrxbgM@alxcluster.qtwqoij.mongodb.net/?retryWrites=true&w=majority
 
+# mongodb+srv://osomfonashticah:YxcFqwxtsne5IZUd@cluster0.227mvms.mongodb.net/status-check?retryWrites=true&w=majority
