--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,9 @@
 API_SECRET = This_is_very_secret_string
-MONGODB_URI = mongodb+srv://contactsenyo:WaNc397ekUyrxbgM@alxcluster.qtwqoij.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = 
+
+EMAIL_SERVICE=
+EMAIL_USER=
+EMAIL_PASSWORD=
+
 
 # mongodb+srv://osomfonashticah:YxcFqwxtsne5IZUd@cluster0.227mvms.mongodb.net/status-check?retryWrites=true&w=majority
